# benchmark-project

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  requirements.txt
noteboks/: results.ipynb
utils/: audio_utils.py  benchmark_utils.py  gpu_utils.py
