[tool.poetry]
package-mode = false
name = "benchmark_project"
version = "0.1.0"
description = "Automated GPU noise + performance benchmark"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "*"
nvidia-ml-py3 = "*"
sounddevice = "*"
soundfile = "*"
numpy = "*"
scipy = "*"
pandas = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"